--- a/src/table.css
+++ b/src/table.css
@@ -1,30 +1,16 @@
-/* Flex container with 2 elements */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+table, th, td {
+  border: 1px solid black;
+}
+th, td {
+  padding: 10px;
+  text-align: left;
+}
 
-header {
-    color: red;
-    font-size: 50px;
-    
-    
-  }
-  ul:first-child {
-    color:green;
-    font-family: courier;
-    font-size: 160%;
-    
-    
-  }
-  .topics{
-    text-align: center;
-    background-color: yellow;
-    padding: 30px;
-    margin: 16px;
-    
-  }
-  div:hover p{
-    display: blockS;
-    color:aqua
-  }
-
+/* Flex container */
 .flex-container {
   display: flex;
   justify-content: space-around;
@@ -35,28 +21,24 @@ header {
   width: 100px;
   height: 100px;
   background-color: lightcoral;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* Grid container with 2 elements */
+/* Grid container */
 .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+  margin-top: 20px;
 }
 
 .grid-item {
   width: 100px;
   height: 100px;
   background-color: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-/* Media queries */
-@media (max-width: 768px) {
-  .flex-item, .grid-item {
-    width: 80px;
-    height: 80px;
-  }
-}
-
-@media (max-width: 480px) {
-  .flex-item, .grid
